on click jump fix

--- a/css/stylesheet2a.css
+++ b/css/stylesheet2a.css
@@ -37,34 +37,38 @@
         "semester3 semester4"
   }
 
-  .semester1 {
+  a.semester1 {
     background-color: #FFB4AA;
     display:flex;
     align-items: center;
     justify-content: center;
     grid-area: semester1;
+    text-decoration: none;
   }
-  .semester2 {
+  a.semester2 {
     background-color: #6ECEB2;
     display:flex;
     align-items: center;
     justify-content: center;
-      grid-area: semester2;
+    grid-area: semester2;
+    text-decoration: none;
   }
 
-  .semester3 {
+  a.semester3 {
     background-color: #59CBE8;
     display:flex;
     align-items: center;
     justify-content: center;
-      grid-area: semester3;
+    grid-area: semester3;
+    text-decoration: none;
   }
-  .semester4 {
+  a.semester4 {
       background-color: #FDD757;
       display:flex;
       align-items: center;
       justify-content: center;
       grid-area: semester4;
+      text-decoration: none;
   }
 
   /*Website navbar */
@@ -151,6 +155,13 @@ a:active {
       grid-gap: 2em;
 }
 
+.semester-grid3{
+    display:grid;
+      grid-template-columns: 5em 1fr 5em;
+      grid-template-rows: auto;
+      grid-gap: 2em;
+}
+
   .semester-heading {
     text-transform: uppercase;
     display:grid;
@@ -180,6 +191,11 @@ a:active {
 }
 
 .semester-grid2 p{
+    background-color: rgba(255, 255, 255, 0.4);
+    padding: .5em;
+}
+
+.semester-grid3 p{
     background-color: rgba(255, 255, 255, 0.4);
     padding: .5em;
 }
@@ -387,6 +403,15 @@ footer p{
         grid-gap: 0em;
       padding: 0em 1em;
   }
+
+.semester-grid3{
+      display:grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: auto;
+        grid-gap: 0em;
+      padding: 0em 1em;
+  }
+
 
   .semester-heading {
     display:grid;
